src/styles/index.scss
/*
    General Styles
*/
.body {
    font-family: 'Roboto', sans-serif;
    position: relative;
    // overflow: auto;
}

.layout-div {
    position: relative;
    margin: 0;
    padding-bottom: 6rem;
    min-height: 100%;
    // overflow: auto;
}
a {
    color: #4399ab;
}

a:hover {
    color: #e9425f;
    text-decoration: none;
}

// --------------------- navbar

.navbar {
    margin: 0;
    border-bottom: 2px solid #e6e8e9;
    padding-top: 1.25rem;
    padding-bottom: 1.25rem;
}

.nav-div {
    position: absolute;
    right: 0px;
    margin-right: 30px;
}

a.nav-title {
    font-family: 'Leckerli One', cursive;
    padding-left: 10px;
    color: #e9425f;
    font-size: 2rem;
}

.navbar-img {
    margin-right: 20px;
}

.nav-item {
    padding-right: 20px;
    padding-top: 15px;
}

.nav-link1 {
    color: #4399ab;
}
.nav-link1:hover {
    color: #4399ab;
    text-decoration: none;
}

.nav-link2 {
    color: #7c7c7c;
}
.nav-link2:hover {
    color: #4399ab;
    text-decoration: none;
}

// -------------------- Home

.img-container {
    position: relative;

}
.home-hero-image {    
    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://images.pexels.com/photos/708392/pexels-photo-708392.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
    width: 100%;
    height: 400px;
    object-fit: cover;
    position: absolute;
    background-size: cover;
    background-position: center;
}

.hero-container {
    width: 100vw;
    height: 400px;
    margin-bottom: 50px;
}

.home-hero-text-container {
    // background-color: rgba(0, 0, 0, 0.7);
    // border-radius: 20px;
    width: 400px;
    height: 6rem;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.home-hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    width: 75vw;
    // background-color: rgba(0, 0, 0, 0.7);
    // border-radius: 20px;
}

.home-hero-text h2 {
    font-family: 'Changa One', cursive;
    letter-spacing: 1px;
    margin-bottom: 1.5rem;
}

.home-hero-text h4 {
    font-family: 'Roboto', sans-serif;
}

.event-section-title {
    font-family: 'Roboto', sans-serif;
    margin-bottom: .75rem;
    margin-top: .75rem;
    font-size: 1.5rem;
    padding-left: 50px;
    padding-right: 50px;  
}

.event-section-text {
    font-family: 'Roboto', sans-serif;
    margin-bottom: 1.25rem;
    margin-top: .75rem;
    padding-left: 50px;
    padding-right: 50px;  
}

// ------------------------- Event cards

.card-row{
    padding-left: 50px;
    padding-right: 50px;
    height: auto;
    
}

.card-column {
    // overflow: auto;  
    height: 400px;
    margin-top: 30px;
}

.event-card {
    display: block;
    position: absolute;
    top: 0;
    border-radius: 10px;
    margin-bottom: 30px;
    height: 400px;
}

.event-card:hover {
    box-shadow: 5px 7px 10px rgba(0,0,0,.3);
    transform: translateY(-3px);
    transition: all .5s;
}

.card-img-top {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    height: 183.5px;
    object-fit: cover;
}

.card-title {
    font-family: 'Rubik', sans-serif;
    margin-bottom: .75rem;
    margin-top: .75rem;
    font-size: 1.5rem;  
}

.date-time {
    color: #5aacbb;
    font-family: 'Rubik', sans-serif;
    text-transform: uppercase;
    font-size: .85rem;
    // font-weight: 500;
}

.attending {
    color: #757575;
    font-family: 'Rubik', sans-serif;
    // text-transform: uppercase;
    font-size: 1rem;
}

.hidden-btn {
    height: 5px;
}

.white-space-row {
    height: 40px;
}

// ----------------------------------------- ABOUT

.about-container {
    padding: 50px;

}
.about-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("https://images.pexels.com/photos/532563/pexels-photo-532563.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
    width: 100%;
    height: 400px;
    object-fit: cover;
    position: absolute;
    background-size: cover;
    background-position: center;
}

.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    width: 75vw;
}

.rebeccaheadshot {
    margin-left: 16px;
    margin-right: 16px;
    object-fit: cover;
}

.right-column {
    padding-left: 50px;
    padding-right: 50px;
}

.hero-text h2 {
    font-family: 'Changa One', cursive;
    letter-spacing: 1px;
    margin-bottom: 1.5rem;
}

.hero-text h4 {
    font-family: 'Roboto', sans-serif;
}

.about-text1 h2 {
    font-family: 'Changa One', cursive;
    letter-spacing: 1px;
    margin-bottom: 1.5rem;
    color: #353e48;
}

// ------------------------------------- ALL MEETUPS

.meetups-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://images.pexels.com/photos/2202685/pexels-photo-2202685.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
    width: 100%;
    height: 400px;
    object-fit: cover;
    position: absolute;
    background-size: cover;
    background-position: center;
}

.meetups-hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    width: 75vw;
    // background-color: rgba(0, 0, 0, 0.7);
    // border-radius: 20px;
}

.meetups-hero-text h2 {
    font-family: 'Changa One', cursive;
    letter-spacing: 1px;
    margin-bottom: 1.5rem;
}

.meetups-hero-text h4 {
    font-family: 'Roboto', sans-serif;
}

// ------------------------------------- EVENT

.event-row1 {
    padding-left: 80px;
    padding-right: 80px;
    padding-top: 35px;
    padding-bottom: 2rem;
}

.event-row2 {
    padding-left: 80px;
    padding-right: 80px;
    padding-top: 2.5rem;
    background-color: #f6f7f8;
}

.event-row3 {
    padding-left: 80px;
    padding-right: 80px;
    padding-bottom: 30px;
    padding-top: 20px;
    background-color: #f6f7f8;
}

.calendar-icon-column {
    text-align: center;
}

.event-calendar-icon {
    font-size: 4rem;
    color: #e9425f;
}

.event-detail-row {
    padding-bottom: 0;
}

.event-detail-row h2 {
    font-family: 'Changa One', cursive;
    letter-spacing: 1px;
    margin-bottom: 1.5rem;
}
.rsvp-btn {
    color: white;
    background-color: #4399ab;
    width: 150px;
    margin: 10px;
}

.rsvp-btn:hover {
    cursor: pointer;
    background-color: #3c808d;
    color: white;
}

.rsvp-btn:focus {
    background-color: white;
    border: 2px #3c808d;
}

.event-img {
    object-fit: cover;
    height: 300px;
    width: 100%;
}

// ----------------------------------- MEETUP

.top-meetup-div {
    background-color: #f6f7f8;
}

// .meetup-img-container {
//     padding-bottom: 20px;
//     padding-right: 20px;
// }

.meetup-img {
    object-fit: cover;
    height: 300px;
    width: 100%;
    border-radius: 15px;
}

.meetup-detail-row h2 {
    font-family: 'Changa One', cursive;
    letter-spacing: 1px;
    margin-bottom: 1.5rem;
}

.meetup-row1 {
    padding-left: 80px;
    padding-right: 80px;
    padding-top: 35px;
    padding-bottom: 2rem;
    background-color: white;
}

.meetup-row2 {
    padding-left: 80px;
    padding-right: 80px;
    padding-top: 1.5rem;
    padding-bottom: 1rem;
    background-color: #f6f7f8;
}

.meetup-row3 {
    padding-left: 95px;
    padding-right: 80px;
    background-color: #f6f7f8;
}

.inline-block {
    display: inline-block;
}

.meetup-desc-title {
    margin-bottom: 1rem;
}

.meetup-upcoming-title {
    margin-bottom: 0;
}

.meetup-bottom-section {
    background-color: #f6f7f8;
    padding-left: 80px;
    padding-right: 80px;
    padding-bottom: 2rem;
}

.meetup-event-row {
    margin-bottom: 30px;
}

.meetup-card-column {
    padding: 0;
    height: 400px;
    margin-top: 30px;
}

// ------------------------- Footer

.footer {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    background-color: #353e48;
    color: white;
    text-align: center;
    padding-top: 1rem;
    // margin-top: 400px;
}

.footer-text {
    padding-top: 1rem;
    padding-left: 16px;
    margin: auto;
    font-size: 1rem;
    display: block;
    color: white;
}

.footer-p {
    padding-top: 1rem;
    padding-bottom: 1rem;
    padding-left: 16px;
    margin: auto;
    font-size: 1.5rem;
    display: block;
    color: white;
}
.footer-link {
    color: black;
}

.footer-icon {
    font-size: 2rem;
    margin-left: 10px;
    margin-right: 10px;
    color: white;
}

.footer-icon:hover {
    color: black;
}

